--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^25.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1"
   },
