--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest --ui"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "c8": "^10.1.3",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
