fix: fix proyect features

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -7,32 +7,32 @@ on:
     branches: [main]
 
 jobs:
-  install-and-build:
-    name: Lint, Build & Coverage
+  install-build-test:
+    name: Lint, Build, Test & Coverage
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: ⬇️ Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: ⚙️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm install --legacy-peer-deps
 
-      - name: Lint code
+      - name: 🧹 Lint code
         run: npm run lint
 
-      - name: Build project
+      - name: 🏗️ Build project
         run: npm run build
 
-      - name: Run coverage
+      - name: 🧪 Run unit tests with coverage
         run: npm run coverage
 
-      - name: Upload coverage to Coveralls
+      - name: 📤 Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
