--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "prepare": "husky install",
     "test": "vitest run --coverage",
     "coverage": "vitest run --coverage.enabled true --coverage.reporter lcov",
-    "e2e": "cypress open",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "e2e": "cypress open"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -27,11 +25,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/react": "^9.1.0",
-    "@storybook/react-vite": "^9.1.0",
-    "@storybook/testing-react": "^2.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -44,6 +37,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "coveralls": "^3.1.1",
     "cypress": "^14.5.3",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
