--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "test": "vitest run --coverage",
-    "coverage": "vitest run --coverage.enabled true --coverage.reporter lcov",
-    "e2e": "cypress open"
+    "coverage": "vitest run --coverage && vitest-badge-reporter --output=./coverage/lcov-report/badge.svg",
+    "e2e": "cypress open",
+    "badge": "vitest-badge-generator --output=./coverage/badge.svg"
   },
   "dependencies": {
     "axios": "^1.11.0",
