--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,12 @@ jobs:
       - name: 🏗️ Build project
         run: npm run build
 
-      - name: 🧪 Run unit tests with coverage
+      - name: 🧪 Run unit tests and generate coverage
         run: npm run coverage
 
-      - name: 📤 Upload coverage to Coveralls
-        uses: coverallsapp/github-action@v2
+      - name: 📤 Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ./coverage/lcov.info
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
+          verbose: true
