--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "lint": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "preview": "vite preview",
-    "prepare": "husky install",
     "test": "vitest run --coverage",
-    "coverage": "vitest run --coverage && vitest-badge-reporter --output=./coverage/lcov-report/badge.svg",
-    "e2e": "cypress open",
-    "badge": "vitest-badge-generator --output=./coverage/badge.svg"
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.11.0",
