--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "preview": "vite preview",
-    "test": "vitest run --coverage",
-    "coverage": "vitest run --coverage"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -24,12 +25,17 @@
     "recharts": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
@@ -37,6 +43,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.5",
     "coveralls": "^3.1.1",
     "cypress": "^14.5.3",
     "eslint": "^9.32.0",
@@ -47,16 +54,20 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "i18next-browser-languagedetector": "^8.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
     "msw": "^1.3.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4",
-    "vitest": "^3.2.4"
+    "vite": "^7.0.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
