--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest"],
     "baseUrl": "src",
-    "paths": {
-    }
+    "paths": {}
   },
   "include": ["src"],
   "exclude": ["dist", "**/*.test.ts", "**/*.test.tsx"]
