--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
