--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "formik": "^2.4.6",
     "i18next": "^25.3.2",
+    "morgan": "^1.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.6.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.2",
     "yup": "^1.7.0"
@@ -40,7 +45,11 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.2.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/storybook__react": "^4.0.2",
@@ -83,5 +92,13 @@
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "description": "Frontend profesional para el sistema **Invest Alerts**, una app de alertas de precios de criptomonedas construida con React 19 + Vite. Este proyecto está pensado para ser **moderno, escalable y de clase mundial**, ideal como template base o para proyectos productivos reales.",
+  "main": "eslint.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
